# D2DoHN

./: CMakeLists.txt  D2DoHN_zh_CN.qm  D2DoHN_zh_CN.ts  README.md  aboutpage.cpp  aboutpage.h  aboutpage.ui  app.rc  container.cpp  container.h  dnsclient.cpp  dnsclient.h  dnserver.cpp  dnserver.h  dohclient.cpp  dohclient.h  generalpage.cpp  generalpage.h  generalpage.ui  logspage.cpp  logspage.h  logspage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myhighlighter.cpp  myhighlighter.h  resources.qrc  selector.cpp  selector.h  selector.ui  titlebar.cpp  titlebar.h  titlebar.ui
